BusOne/src/objects/MC_Cycle_Plan_Channel_vod__c.object
<CustomObject>
    <description>Defines an activity channel that is associated to a Cycle Plan Target.</description>
    <fields>
        <fullName>Activity_Goal_Edit_vod__c</fullName>
        <description>Edited number of channel activities for the Target</description>
        <label>Activity Goal Edit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Activity_Actual_vod__c</fullName>
        <description>Count of actual channel activities according to the Cycle Channel Criteria.</description>
        <label>Channel Activity Actual</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Activity_Goal_vod__c</fullName>
        <description>Suggested number of channel activities for the Target</description>
        <label>Channel Activity Goal</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Activity_Max_vod__c</fullName>
        <description>Maximum number of activities allowed toward channel attainment</description>
        <label>Channel Activity Max</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Activity_Remaining_vod__c</fullName>
        <description>Goals - Actual. If no goals provided then remaining will be blank.</description>
        <label>Channel Activity Remaining</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Attainment_vod__c</fullName>
        <description>Channel Interactions Earned / Channel Interaction Goals. If no goals value is blank.</description>
        <label>Channel Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Actual_vod__c</fullName>
        <description>Channel Actual Activity x Cycle Channel Weight</description>
        <label>Channel Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Earned__c</fullName>
        <description>If Channel Activity Actual is greater than Channel Activity Max this value will be Channel Activity Max, otherwise Channel Activity Actual</description>
        <label>Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Interactions_Goal_vod__c</fullName>
        <description>Channel Activity Goal x Cycle Channel Weight</description>
        <label>Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan Channel&apos;s Attainment and the % Cycle Completed.</description>
        <label>Channel Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_vod__c</fullName>
        <description>Channel label from the Cycle Channel</description>
        <formula>Cycle_Channel_vod__r.Channel_Label_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Channel_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Cycle Channel that this Cycle Plan Channel is associated with. This defines how channel activities are calculated</description>
        <label>Cycle Channel</label>
        <referenceTo>MC_Cycle_Channel_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Channels</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Channels_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Target_vod__c</fullName>
        <description>Related Cycle Plan Target record</description>
        <label>Cycle Plan Target</label>
        <referenceTo>MC_Cycle_Plan_Target_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Plan Channels</relationshipLabel>
        <relationshipName>MC_Cycle_Plan_Channels_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_vod__c</fullName>
        <formula>Cycle_Plan_Target_vod__r.Cycle_Plan_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_vod__c</fullName>
        <description>Date of the most recent activity that was counted towards the Channel Activity Actual</description>
        <label>Channel Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime_vod__c</fullName>
        <description>Date/time of the most recent activity that was counted towards the Channel Activity Actual</description>
        <label>Channel Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Calculated_vod__c</fullName>
        <description>Date and time the Cycle Plan was last calculated.</description>
        <label>Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Attainment_vod__c</fullName>
        <description>Summary Product attainment for the channel.</description>
        <label>Product Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Product interactions Earned</description>
        <label>Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Interactions_Goal_vod__c</fullName>
        <description>Sum of Product Interaction Goals for this Channel.</description>
        <label>Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Status_vod__c</fullName>
        <description>Comparing the Cycle Plan Channel&apos;s Product Attainment and the % Cycle Completed.</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Activity_Goal_Edit_vod__c</fullName>
        <description>Edited number of team channel activities for the Target</description>
        <label>Team Activity Goal Edit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Activity_Actual_vod__c</fullName>
        <description>Count of actual team channel activities according to the Cycle Channel Criteria.</description>
        <label>Team Channel Activity Actual</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Activity_Goal_vod__c</fullName>
        <description>Suggested number of team channel activities for the Target</description>
        <label>Team Channel Activity Goal</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Activity_Max_vod__c</fullName>
        <description>Maximum number of team activities allowed toward channel attainment</description>
        <label>Team Channel Activity Max</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Activity_Remaining_vod__c</fullName>
        <description>Team Channel Activity Goal minus Team Channel Activity Actual, if no goals provided then remaining will be blank</description>
        <label>Team Channel Activity Remaining</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Attainment_vod__c</fullName>
        <description>Team Channel Interactions Earned / Team Channel Interactions Goals. If no goals, then value is blank.</description>
        <label>Team Channel Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Actual_vod__c</fullName>
        <description>Team Channel Activity Actual * Cycle Channel Weight</description>
        <label>Team Channel Interactions Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Earned_vod__c</fullName>
        <description>If Team Channel Activity Actual is greater than Team Channel Activity Max, then this value will be Team Channel Activity Max, else Team Channel Activity Actual</description>
        <label>Team Channel Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Interactions_Goal_vod__c</fullName>
        <description>Team Channel Activity Goal x Cycle Channel Weight</description>
        <label>Team Channel Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Channel_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Team Channel Attainment and the % Cycle Completed.</description>
        <label>Team Channel Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Last_Activity_Date_vod__c</fullName>
        <description>Date of the most recent activity that was counted towards the Team Channel Activity Actual</description>
        <label>Team Channel Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Last_Activity_Datetime_vod__c</fullName>
        <description>Date/time of the most recent activity that was counted towards the Team Channel Activity Actual</description>
        <label>Team Channel Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team_Product_Attainment_vod__c</fullName>
        <description>Summary Team Product Attainment for the channel</description>
        <label>Team Product Attainment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Earned_vod__c</fullName>
        <description>Sum of all Team Product Interactions Earned</description>
        <label>Team Product Interactions Earned</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Interactions_Goal_vod__c</fullName>
        <description>Sum of Team Product Interaction Goals for this Channel</description>
        <label>Team Product Interactions Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Product_Status_vod__c</fullName>
        <description>Comparing the Target&apos;s Team Product Attainment and the % Cycle Completed.</description>
        <label>Team Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On_Schedule_vod</fullName>
                </value>
                <value>
                    <fullName>Under_Reached_vod</fullName>
                </value>
                <value>
                    <fullName>Over_Reached_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate Channels for a Cycle Plan Target. Cycle_Plan_Target_vod__c.Id +__+ Cycle_Channel_vod__c.Id</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zvod_Last_Activity_Date_vod__c</fullName>
        <description>Marker field to display the date of the most recent activity that was counted towards the Channel Activity Actual</description>
        <label>Channel Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zvod_Team_Last_Activity_Date_vod__c</fullName>
        <description>Marker field to display the date of the most recent activity that was counted towards the Team Channel Activity Actual</description>
        <label>Team Channel Last Activity Date</label>
        <type>Date</type>
    </fields>
    <label>MC Cycle Plan Channel</label>
    <nameField>
        <displayFormat>CPC-{0000}</displayFormat>
        <label>Cycle Plan Channel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Plan Channels</pluralLabel>
    <recordTypes>
        <fullName>Channel_Only_vod</fullName>
        <active>true</active>
        <description>Indicates only channel activities will be calculated</description>
        <label>Channel_Only_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_with_Product_vod</fullName>
        <active>true</active>
        <description>Indicates both channel and product activities will be calculated</description>
        <label>Channel_with_Product_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Channel_Activity_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Channel_Activity_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Channel_Activity_Goal_vod__c</errorDisplayField>
        <errorMessage>Channel Activity Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Validations_vod</fullName>
        <active>true</active>
        <description>Channel_Activity_Max_vod cannot be less than 0 or less than Channel_Activity_Goal_vod</description>
        <errorConditionFormula>OR(
Channel_Activity_Max_vod__c &lt; 0,
Channel_Activity_Max_vod__c &lt; Channel_Activity_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Channel_Activity_Max_vod__c</errorDisplayField>
        <errorMessage>Channel Activity Max cannot be less than 0 or less than Channel Activity Goal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Goal_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Channel_Activity_Goal_vod cannot be less than 0</description>
        <errorConditionFormula>Team_Channel_Activity_Goal_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Team_Channel_Activity_Goal_vod__c</errorDisplayField>
        <errorMessage>Team Channel Activity Goal cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Max_Validations_vod</fullName>
        <active>true</active>
        <description>Team_Channel_Activity_Max_vod cannot be less than 0 or less than Team_Channel_Activity_Goal_vo</description>
        <errorConditionFormula>OR(
Team_Channel_Activity_Max_vod__c &lt; 0,
Team_Channel_Activity_Max_vod__c &lt;Team_Channel_Activity_Goal_vod__c
)</errorConditionFormula>
        <errorDisplayField>Team_Channel_Activity_Max_vod__c</errorDisplayField>
        <errorMessage>Team Channel Activity Max cannot be less than 0 or less than Team Channel Activity Goal.</errorMessage>
    </validationRules>
</CustomObject>